syntax = "proto3";

package fitglue;

option go_package = "github.com/fitglue/server/src/go/pkg/types/pb";

import "google/protobuf/timestamp.proto";
import "activity.proto";

// PendingInput represents a paused pipeline execution waiting for user interaction.
// For auto-populated inputs (e.g., Parkrun results), the pipeline continues and resumes later.
message PendingInput {
  string activity_id = 1;
  string user_id = 2;

  enum Status {
    STATUS_UNSPECIFIED = 0;
    STATUS_WAITING = 1;
    STATUS_COMPLETED = 2;
  }
  Status status = 3;

  // Fields the user interface should ask for (e.g. "title", "description")
  repeated string required_fields = 4;

  // Data provided by the user or auto-populated (filled when status=COMPLETED)
  map<string, string> input_data = 5;

  // Field 6 was original_payload (exceeds 1MB Firestore limit)
  reserved 6;
  // GCS URI for large payloads: gs://{bucket}/payloads/{userId}/{activityId}.json
  string original_payload_uri = 17;

  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
  google.protobuf.Timestamp completed_at = 9;

  // For "continue anyway" enrichers (e.g., Parkrun) - pipeline continues despite pending input
  bool continued_without_resolution = 10;
  string linked_activity_id = 11;       // Activity that was created while pending
  string pipeline_id = 12;              // Pipeline that contains this enricher
  string enricher_provider_id = 13;     // Enricher that created this pending input

  // Auto-population mode - system will auto-fill, not user
  bool auto_populated = 14;
  google.protobuf.Timestamp auto_deadline = 15;  // If not auto-resolved by deadline, prompt user

  // Provider metadata - context data from the enricher for the UI (e.g., lap info for hybrid race tagger)
  map<string, string> provider_metadata = 16;
}
